# signalflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.railway  GCP_COMMANDS.md  HANDOVER.md  PRD.md  PROGRESS.md  README.md  TECHNICAL_GUIDE.md  VERSION_HISTORY.md  agent.py  agent_v3.py  config.py  dashboard.py  db.py  deploy-gcp.sh  docker-compose.yml  event_bus.py  kol_tracker.py  mcp_client.py  migrate_to_supabase.py  models.py  pyproject.toml  record_demo.py  risk.py  run.sh  runner.py  scoring.py  seed_data.py  signalflow.service  signals.py  start.sh  start_agent.sh  triggers.py
agents/: __init__.py  base.py  executor.py  funding_analyst.py  orchestrator.py  pm_analyst.py  trend_analyst.py
pages/: 00_landing.py  01_overview.py  02_portfolio.py  03_signals.py  04_analytics.py  05_kol_tracker.py
styles/: theme.py
tests/: test_executor_sizing.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/analytics/: page.tsx
web/src/app/api/data/: route.ts
web/src/app/dashboard/: page.tsx
web/src/app/portfolio/: page.tsx
web/src/app/signals/: page.tsx
web/src/app/whales/: page.tsx
web/src/components/: metric-card.tsx  nav.tsx  signal-card.tsx
web/src/components/charts/: allocation-pie.tsx  pnl-scatter.tsx  wallet-chart.tsx
web/src/lib/: colors.ts  db.ts  queries.ts  types.ts
